Bug 135916 - Scroll to top (to cursor) after applying page style at page break (comment 2)
Summary: Scroll to top (to cursor) after applying page style at page break (comment 2)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords: bibisectRequest, needUITest, regression
Depends on:
Blocks:
 
Reported: 2020-08-19 11:36 UTC by Telesto
Modified: 2020-09-29 09:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (494.76 KB, application/vnd.oasis.opendocument.text)
2020-09-27 18:19 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-08-19 11:36:58 UTC Comment hidden (off-topic)
Comment 1 Telesto 2020-08-19 11:44:47 UTC
The number is type of issue starting to become bit infuriating (it started with bug 134439; fixed), still some quirks around (this one and bug 135636)

The page style settings are already hard to understand, IMHO. Having some ENHANCEMENT bugs open for that, however those sneaky bugs make even more frustrating to use

So feel free to bibisect (it's optional :P; I will do it myself at some point if not done before)
Comment 2 Telesto 2020-09-27 18:19:15 UTC
Created attachment 165893 [details]
Example file

1. Open the attached file
2. Hoover over blue page break line at page 3
3. Edit page break
4. Text flow tab -> Change page style from Default to Landscape

Result: scrolls the first page
Comment 3 Telesto 2020-09-27 18:22:35 UTC
@Caolan
Looks like again another variant off 

author	Jan Holesovsky <kendy@collabora.com>	2018-01-23 18:13:01 +0100
committer	Jan Holesovsky <kendy@collabora.com>	2018-01-24 11:45:52 +0100
commit c3a085d22742f88e91ff92f319a26d6e8d1d9a98 (patch)
tree 9f84d93e9a2822760b60730e9c6130a31e0302db
parent 3bbf8d0a9b9e36299c889d8252d9a2b068f17ff6 (diff)
lokdialog: Convert the Table -> Properties... to async exec.
Comment 4 Caolán McNamara 2020-09-27 20:00:01 UTC
I can confirm anyway, especially with the gen backend.

Maybe the thing to do here is just keep the thing affected by ok selected when the dialog is oked. https://gerrit.libreoffice.org/c/core/+/103525 I had earlier saved and restored where the cursor was considered to be around the ok handler, but the very original state was to basically do this and that seems a defensible position and solve the problem
Comment 5 Commit Notification 2020-09-28 10:34:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9c61732677d038e32b73fc9fb883aced14c0febf

tdf#135916 just set the target table as selection

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2020-09-28 10:50:43 UTC
done in master, backport to 7-0 in gerrit
Comment 7 Commit Notification 2020-09-29 08:51:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/75bae11e0867c440b9cf0923c236b518380fe87e

tdf#135916 just set the target table as selection

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.