tdf#135916 just set the target table as selection

don't save and restore the cursor when the format is applied

Change-Id: I320b714193b604cb480a517add4a4a61f5a5128e